k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
spec:
  replicas: 3  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: 058264533474.dkr.ecr.ap-south-1.amazonaws.com/java-sample-app:PRESENT_BUILD_ID
          ports:
            - containerPort: 8080  # Adjust the port as needed
      imagePullSecrets:
        - name: ecr-secret
